--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@lolhgcfcfcghgfd/cats-logger",
-  "version": "1.0.1",
+  "name": "cats-logger",
+  "version": "1.0.3",
   "description": "simple logger",
   "main": "index.js",
   "types": "types/index.d.ts",
